# vcu-ctrl-sw

./: .gitignore  CMakeLists.txt  module_dec.cpp  module_dec.h
app/: BackGround.cpp  BackGround.h  CMakeLists.txt  ClockSync.cpp  ClockSync.h  CustomSei.cpp  CustomSei.h  DRMDisplay.cpp  DRMDisplay.h  DRMDumbTest.cpp  DRMDumbTest.h  DecMgr.cpp  DecMgr.h  EncMgr.cpp  EncMgr.h  LatencyStats.cpp  LatencyStats.h  MemMgr.cpp  MemMgr.h  RTDecoder.cpp  RTDecoder.h  RTEncoder.cpp  RTEncoder.h  SEIParser.h  SEITimestamp.c  SeiParser.cpp  SeiParser.h  SeiTimestamp.h  SliceFeeder.cpp  SliceFeeder.h  V4L2Source.cpp  V4L2Source.h  VideoTypes.h  XilinxSyncIP.cpp  XilinxSyncIP.h  YUVFileIO.cpp  main_dec.cpp  main_dec_drm.cpp  main_enc.cpp  main_enc_file.cpp  (+1 more)
exe_decoder/: CMakeLists.txt  CmdParser.cpp  CmdParser.h  CodecUtils.cpp  CodecUtils.h  HDRWriter.cpp  HDRWriter.h  InputLoader.cpp  InputLoader.h  IpDevice.cpp  IpDevice.h  IpDeviceCommon.cpp  IpDeviceCommon.h  SinkCheckSum.cpp  SinkYuvCrc.cpp  SinkYuvCrc.h  SinkYuvMd5.cpp  SinkYuvMd5.h  main.cpp  resource.h
exe_encoder/: CMakeLists.txt  CfgParser.cpp  CfgParser.h  CodecUtils.cpp  CodecUtils.h  CommandsSender.cpp  CommandsSender.h  EncCmdMngr.cpp  EncCmdMngr.h  HDRParser.cpp  HDRParser.h  ICommandsSender.h  IpDevice.cpp  IpDevice.h  ParserMain.cpp  QPGenerator.cpp  QPGenerator.h  RCPlugin.h  ROIMngr.cpp  ROIMngr.h  TwoPassMngr.cpp  TwoPassMngr.h  container.cpp  main.cpp  resource.h  sink_bitrate.cpp  sink_bitrate.h  sink_bitstream_writer.cpp  sink_bitstream_writer.h  sink_encoder.h  sink_lookahead.h  sink_repeater.h  sink_yuv_md5.cpp  sink_yuv_md5.h
lib_app/: AllocatorTracker.cpp  BaseFrameWriter.cpp  BufPool.cpp  CMakeLists.txt  CompFrameCommon.cpp  FileUtils.cpp  FrameReader.cpp  JsonFile.cpp  MD5.cpp  Parser.cpp  PixMapBufPool.cpp  PlaneUtils.cpp  SinkCrcDump.cpp  SinkCrop.cpp  SinkFrame.cpp  SinkStreamMd5.cpp  Tokenizer.cpp  UnCompFrameReader.cpp  UnCompFrameWriter.cpp  YUVFileIO.cpp  YuvIO.cpp  console_linux.cpp  console_windows.cpp  convert.cpp  plateform_linux.cpp  plateform_windows.cpp  utils.cpp  video_utils.h
lib_bitstream/: AVC_RbspEncod.c  AVC_RbspEncod.h  AVC_SkippedPict.c  AVC_SkippedPict.h  BitStreamLite.c  BitStreamLite.h  CMakeLists.txt  Cabac.c  Cabac.h  HEVC_RbspEncod.c  HEVC_RbspEncod.h  HEVC_SkippedPict.c  HEVC_SkippedPict.h  IRbspWriter.h  RbspEncod.c  RbspEncod.h  SkippedPicture.h
lib_common/: AUD.h  AlignedAllocator.c  AllocatorDefault.c  AvcLevelsLimit.c  AvcLevelsLimit.h  AvcUtils.c  BufCommon.c  BufCommonInternal.h  BufConst.h  BufferAPI.c  BufferAPIInternal.h  BufferCircMeta.c  BufferCircMeta.h  BufferHandleMeta.c  BufferHandleMetaInternal.h  BufferLookAheadMeta.c  BufferPictureDecMeta.c  BufferPictureMeta.c  BufferPixMapMeta.c  BufferSeiMeta.c  BufferStreamMeta.c  CMakeLists.txt  ChannelResources.c  ChannelResources.h  DisplayInfoMeta.c  Error.c  Fifo.c  Fifo.h  FourCC.c  HDR.c  HardwareConfig.c  HardwareConfig.h  HardwareDriver.c  HevcLevelsLimit.c  HevcLevelsLimit.h  HevcUtils.c  HwScalingList.c  HwScalingList.h  IntVector.c  IntVector.h  (+23 more)
lib_common_dec/: BufferStatisticsMeta.c  CMakeLists.txt  ChannelState.h  DecBuffers.c  DecBuffersInternal.h  DecChanParam.h  DecHardwareConfig.c  DecHardwareConfig.h  DecHwScalingList.c  DecHwScalingList.h  DecInfo.c  DecInfoInternal.h  DecOutputSettings.c  DecPicParam.h  DecSliceParam.h  Defines_mcu.h  HDRMeta.c  I_DecArch.h  I_Feeder.h  InternalError.h  IpDecFourCC.c  ParseResult.h  RbspParser.c  RbspParser.h  SchedulerInfo.h  StartCodeParam.h  StreamSettings.c  StreamSettingsInternal.h
lib_conv_yuv/: AL_RasterConvert.cpp  CMakeLists.txt
lib_decode/: AvcDecoder.c  AvcHwBufInitialization.c  AvcHwBufInitialization.h  CMakeLists.txt  DecSchedulerMcu.c  DecSettings.c  DecSettingsInternal.h  DecoderFeeder.c  DecoderFeeder.h  DecoderFrameCtx.h  DefaultDecoder.c  DefaultDecoder.h  FrameParam.c  FrameParam.h  HevcDecoder.c  HevcHwBufInitialization.c  HevcHwBufInitialization.h  I_DecScheduler.c  I_DecScheduler.h  I_DecoderCtx.h  LibDecoderHost.c  LibDecoderHost.h  NalUnitParser.c  NalUnitParser.h  NalUnitParserPrivate.h  Patchworker.c  Patchworker.h  SliceDataParsing.c  SliceDataParsing.h  SplitBufferFeeder.c  SplitBufferFeeder.h  UnsplitBufferFeeder.c  UnsplitBufferFeeder.h  WorkPool.c  WorkPool.h  lib_decode.c
lib_encode/: AVC_EncUtils.c  AVC_Encoder.c  AVC_Sections.c  AVC_Sections.h  CMakeLists.txt  Com_Encoder.c  Com_Encoder.h  DriverDataConversions.c  DriverDataConversions.h  EncSchedulerCommon.c  EncSchedulerCommon.h  EncSchedulerMcu.c  EncUtils.c  EncUtils.h  Encoder.h  HEVC_EncUtils.c  HEVC_Encoder.c  HEVC_Sections.c  HEVC_Sections.h  IP_EncoderCtx.h  IP_Stream.c  IP_Stream.h  I_EncArch.h  I_EncScheduler.c  I_EncScheduler.h  LibEncoderHost.c  LibEncoderHost.h  LoadLda.c  LoadLda.h  NalWriters.c  NalWriters.h  Sections.c  Sections.h  SourceBufferChecker.c  SourceBufferChecker.h  lib_encoder.c
lib_fpga/: BoardNone.c  CMakeLists.txt  DevicePool.c  DevicePool.h  DmaAllocLinux.c
lib_network/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.h  ClockSync.h  ClockWait.cpp  ClockWait.h  MemPoolUDP.h  NetworkCfg.cpp  NetworkCfg.h  QueueAsync.cpp  QueueAsync.h  QueueStats.h  QueueStatsCsvWriter.cpp  QueueStatsCsvWriter.h  ReedSoloman.c  ReedSoloman.h  ReliableUDP.cpp  ReliableUDP.h  clock_wait.cpp  clock_wait.h  clock_wait_test.cpp  plot_queue_stats.py  udp_mem.h  udp_net.cpp  udp_net.h  udp_rs.c
lib_parsing/: Aup.h  AvcParser.c  AvcParser.h  Avc_PictMngr.c  Avc_PictMngr.h  Avc_SliceHeaderParsing.c  Avc_SliceHeaderParsing.h  CMakeLists.txt  Concealment.c  Concealment.h  DPB.c  DPB.h  HevcParser.c  HevcParser.h  Hevc_PictMngr.c  Hevc_PictMngr.h  Hevc_SliceHeaderParsing.c  Hevc_SliceHeaderParsing.h  I_PictMngr.c  I_PictMngr.h  SeiParser.c  SeiParser.h  common_syntax.c  common_syntax.h
realtime_encoder/: CMakeLists.txt  RealtimeEncoder.cpp  RealtimeEncoder.h  V4l2DmabufSource.cpp  V4l2DmabufSource.h  YuvFileSource.h
tests/: CMakeLists.txt  DRMDumbTest.h  SliceFeeder.cpp  SliceFeeder.h  YUVFileIO.h  main_dec_file.cpp  main_enc_file.cpp  plot_reliable_udp_jitter.py  (+5 more)
(+185 files in other folders)
